fix: enhance styles for name-container and nav-name in MobileMaster.scss and Navmenu.tsx for improved alignment and readability

--- a/src/client/src/components/MobileMaster.scss
+++ b/src/client/src/components/MobileMaster.scss
@@ -35,6 +35,9 @@
         font-size: 32px;
         margin-bottom: 0;
         text-shadow: 2px 2px 2px rgb(0, 0, 0);
+        width: 100%;
+        text-align: center;
+        font-family: "Quantico", "Arial", sans-serif !important;
       }
       .description {
         margin-top: 0;
@@ -63,11 +66,13 @@
       align-items: center;
       height: 100%;
       width: 100%;
-      h2 {
-        margin-left: 10px;
+      .nav-name {
+        text-align: center;
         font-weight: 400;
-        font-size: 20px;
-        margin-bottom: 0%;
+        font-size: 22px;
+        margin: 0 auto;
+        margin-top: 5px;
+        font-family: "Quantico", "Arial", sans-serif !important;
       }
       .nav-buttons {
         display: flex;
@@ -239,7 +244,6 @@
 
   //contact
   @mixin icon {
-
     width: 45px;
     margin: 20px;
     &:hover {
@@ -247,7 +251,7 @@
       scale: 1.1;
     }
   }
-  
+
   .contact-container {
     display: flex;
     flex-direction: column;
@@ -259,7 +263,7 @@
       grid-template-columns: 1fr;
       grid-template-rows: 1fr;
       grid-template-areas: "overlap";
-  
+
       .digits {
         display: flex;
         flex-direction: column;
@@ -298,13 +302,10 @@
         margin-left: auto;
         margin-right: auto;
         top: 18%;
-        ;
       }
     }
     h1 {
       color: white;
     }
   }
-
-  
 }
